Work in progress

--- a/html5up-alpha/css/style.css
+++ b/html5up-alpha/css/style.css
@@ -234,7 +234,7 @@
 		background: #f8f8f8;
 		border-radius: 6px;
 		border: solid 1px #e5e5e5;
-		color: inherit;
+/*		color: inherit;*/
 		display: block;
 		outline: 0;
 		padding: 0 1em;
