Work in progress

--- a/html5up-alpha/css/style.css
+++ b/html5up-alpha/css/style.css
@@ -1220,6 +1220,7 @@
 /* Banner */
 
 	#banner {
+/*        http://css-tricks.com/forums/topic/full-page-background-pattern/*/
 		background-attachment: scroll,							fixed;
 		background-color: #666;
 		background-image: url("images/overlay.png"), url("../images/banner.jpg");
@@ -1227,7 +1228,8 @@
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
 		color: #fff;
-		padding: 12em 0 20em 0;
+/*		top right bottom left*/
+        padding: 20em 0 12em 0;
 		text-align: center;
 	}
 
