--- a/css/style.css
+++ b/css/style.css
@@ -935,21 +935,23 @@ h6.foo2 {
 
 .rating {margin-bottom: 30px;}
 .rating span.star {display:block; float:left; width:24px; height:22px; padding-right: 2px; background-repeat: no-repeat;}
-.rating span.off {background-image: url(images/icons/star-off.png);}
+.rating span.off {background-image: url(../images/icons/star-off.png);}
 .rating span.on,
 .rating span.star:hover,
-.rating span.over {background-image: url(images/icons/star-on.png); cursor:pointer;}
+.rating span.over {background-image: url(../images/icons/star-on.png); cursor:pointer;}
 
+/*
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
     .rate {
-        background-image: url(images/icons/rate-x2.png);
+        background-image: url(../images/icons/rate.png);
         background-size: 130px auto;
     }
-    .rating span.off {background-image: url(images/icons/star-off-x2.png); background-size: 19px auto;}
+    .rating span.off {background-image: url(../images/icons/star-off.png); background-size: 19px auto;}
     .rating span.on,
     .rating span.star:hover,
-    .rating span.over {background-image: url(images/icons/star-on-x2.png); background-size: 19px auto;}
+    .rating span.over {background-image: url(../images/icons/star-on.png); background-size: 19px auto;}
 }
+*/
 
 /*===================================================*/
 /* 2. PAGE ITEMS, WIDGETS */
@@ -5025,8 +5027,8 @@ footer .footer {
 .widget-profile .inner {padding: 24px 25px 24px 21px;}
 
 .widget-profile .avatar {
-    width: 98px;
-    height: 98px;
+    width: 128px;
+    height: 128px;
     margin-right: 20px;
     float: left;
 }
